cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09431_291144158.yaml
JDBC: jdbc:mysql://${Token[TOKEN.155]}:${Token[TOKEN.156]}/petstore
Resources:
  petclinicvpc2170CC9D:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/Resource
  petclinicvpcPublicSubnet1SubnetD33CBA20:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: petclinicvpc2170CC9D
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet1/Subnet
  petclinicvpcPublicSubnet1RouteTable2D6ADA70:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: petclinicvpc2170CC9D
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet1/RouteTable
  petclinicvpcPublicSubnet1RouteTableAssociation744CCFB9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: petclinicvpcPublicSubnet1RouteTable2D6ADA70
      SubnetId:
        Ref: petclinicvpcPublicSubnet1SubnetD33CBA20
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet1/RouteTableAssociation
  petclinicvpcPublicSubnet1DefaultRoute9EA4FC2A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: petclinicvpcPublicSubnet1RouteTable2D6ADA70
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: petclinicvpcIGW311B68E3
    DependsOn:
      - petclinicvpcVPCGW785ADEB0
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet1/DefaultRoute
  petclinicvpcPublicSubnet1EIP1911C64A:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet1/EIP
  petclinicvpcPublicSubnet1NATGateway3A28698E:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - petclinicvpcPublicSubnet1EIP1911C64A
          - AllocationId
      SubnetId:
        Ref: petclinicvpcPublicSubnet1SubnetD33CBA20
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet1/NATGateway
  petclinicvpcPublicSubnet2Subnet389BBB6A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: petclinicvpc2170CC9D
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet2/Subnet
  petclinicvpcPublicSubnet2RouteTable55AC07B2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: petclinicvpc2170CC9D
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet2/RouteTable
  petclinicvpcPublicSubnet2RouteTableAssociation9D8D9F28:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: petclinicvpcPublicSubnet2RouteTable55AC07B2
      SubnetId:
        Ref: petclinicvpcPublicSubnet2Subnet389BBB6A
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet2/RouteTableAssociation
  petclinicvpcPublicSubnet2DefaultRoute8D4111EA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: petclinicvpcPublicSubnet2RouteTable55AC07B2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: petclinicvpcIGW311B68E3
    DependsOn:
      - petclinicvpcVPCGW785ADEB0
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PublicSubnet2/DefaultRoute
  petclinicvpcPrivateSubnet1Subnet9223FED1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: petclinicvpc2170CC9D
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet1/Subnet
  petclinicvpcPrivateSubnet1RouteTable38352431:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: petclinicvpc2170CC9D
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet1/RouteTable
  petclinicvpcPrivateSubnet1RouteTableAssociationA0B1CBAB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: petclinicvpcPrivateSubnet1RouteTable38352431
      SubnetId:
        Ref: petclinicvpcPrivateSubnet1Subnet9223FED1
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet1/RouteTableAssociation
  petclinicvpcPrivateSubnet1DefaultRoute8F44190E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: petclinicvpcPrivateSubnet1RouteTable38352431
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: petclinicvpcPublicSubnet1NATGateway3A28698E
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet1/DefaultRoute
  petclinicvpcPrivateSubnet2Subnet63FF8DCC:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: petclinicvpc2170CC9D
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet2/Subnet
  petclinicvpcPrivateSubnet2RouteTable87270EFB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: petclinicvpc2170CC9D
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet2/RouteTable
  petclinicvpcPrivateSubnet2RouteTableAssociation1E8BC468:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: petclinicvpcPrivateSubnet2RouteTable87270EFB
      SubnetId:
        Ref: petclinicvpcPrivateSubnet2Subnet63FF8DCC
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet2/RouteTableAssociation
  petclinicvpcPrivateSubnet2DefaultRouteA6AE297E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: petclinicvpcPrivateSubnet2RouteTable87270EFB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: petclinicvpcPublicSubnet1NATGateway3A28698E
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/PrivateSubnet2/DefaultRoute
  petclinicvpcIGW311B68E3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: petclinic-stack/petclinic-vpc
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/IGW
  petclinicvpcVPCGW785ADEB0:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: petclinicvpc2170CC9D
      InternetGatewayId:
        Ref: petclinicvpcIGW311B68E3
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-vpc/VPCGW
  petclinicclusterD641C8DB:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-cluster/Resource
  petclinicdbsg2269C9DA:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: database security group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.0.0.0/16
          Description: Allow inbound to db within VPC
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
      VpcId:
        Ref: petclinicvpc2170CC9D
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-db-sg/Resource
  Subnet:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Database subnet group
      SubnetIds:
        - Ref: petclinicvpcPrivateSubnet1Subnet9223FED1
        - Ref: petclinicvpcPrivateSubnet2Subnet63FF8DCC
    Metadata:
      aws:cdk:path: petclinic-stack/Subnet
  PetClinicDBCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora
      DatabaseName: petstore
      DBSubnetGroupName:
        Ref: Subnet
      EngineMode: serverless
      MasterUsername: dbaadmin
      MasterUserPassword: "{{resolve:ssm-secure:/warner/looney/roadrunner/dbpassword:1}}"
      ScalingConfiguration:
        AutoPause: true
        MaxCapacity: 8
        MinCapacity: 2
        SecondsUntilAutoPause: 600
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - petclinicdbsg2269C9DA
            - GroupId
    Metadata:
      aws:cdk:path: petclinic-stack/PetClinicDBCluster
  petclinicfgserviceLBF460FBEE:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - petclinicfgserviceLBSecurityGroup156E34A6
            - GroupId
      Subnets:
        - Ref: petclinicvpcPublicSubnet1SubnetD33CBA20
        - Ref: petclinicvpcPublicSubnet2Subnet389BBB6A
      Type: application
    DependsOn:
      - petclinicvpcPublicSubnet1DefaultRoute9EA4FC2A
      - petclinicvpcPublicSubnet2DefaultRoute8D4111EA
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/LB/Resource
  petclinicfgserviceLBSecurityGroup156E34A6:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB petclinicstackpetclinicfgserviceLB65142E92
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: petclinicvpc2170CC9D
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/LB/SecurityGroup/Resource
  petclinicfgserviceLBSecurityGrouptopetclinicstackpetclinicfgserviceServiceSecurityGroup00664B758080EF083FFB:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - petclinicfgserviceLBSecurityGroup156E34A6
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - petclinicfgserviceServiceSecurityGroupFF49FEC5
          - GroupId
      FromPort: 8080
      ToPort: 8080
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/LB/SecurityGroup/to petclinicstackpetclinicfgserviceServiceSecurityGroup00664B75:8080
  petclinicfgserviceLBPublicListener9DB7592F:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: petclinicfgserviceLBPublicListenerECSGroup0C5050A7
          Type: forward
      LoadBalancerArn:
        Ref: petclinicfgserviceLBF460FBEE
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/LB/PublicListener/Resource
  petclinicfgserviceLBPublicListenerECSGroup0C5050A7:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: petclinicvpc2170CC9D
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/LB/PublicListener/ECSGroup/Resource
  petclinicfgserviceTaskDefTaskRole2840969B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/TaskDef/TaskRole/Resource
  petclinicfgserviceTaskDef164D6564:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: database
              Value: mysql
            - Name: spring.datasource.url
              Value:
                Fn::Join:
                  - ""
                  - - jdbc:mysql://
                    - Fn::GetAtt:
                        - PetClinicDBCluster
                        - Endpoint.Address
                    - ":"
                    - Fn::GetAtt:
                        - PetClinicDBCluster
                        - Endpoint.Port
                    - /petstore
            - Name: spring.datasource.username
              Value: dbaadmin
            - Name: spring.datasource.initialization-mode
              Value: always
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 4
                    - Fn::Split:
                        - ":"
                        - Ref: SsmParameterValuewarnerlooneyroadrunnerrepositoryarnC96584B6F00A464EAD1953AFF4B05118Parameter
                - .dkr.ecr.
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - ":"
                        - Ref: SsmParameterValuewarnerlooneyroadrunnerrepositoryarnC96584B6F00A464EAD1953AFF4B05118Parameter
                - "."
                - Ref: AWS::URLSuffix
                - /
                - Ref: SsmParameterValuewarnerlooneyroadrunnerrepositorynameC96584B6F00A464EAD1953AFF4B05118Parameter
                - :latest
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: petclinicfgserviceTaskDefwebLogGroup111C118A
              awslogs-stream-prefix: petclinic-fg-service
              awslogs-region:
                Ref: AWS::Region
          Name: web
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
          Secrets:
            - Name: spring.datasource.password
              ValueFrom:
                Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - ":ssm:"
                    - Ref: AWS::Region
                    - ":"
                    - Ref: AWS::AccountId
                    - :parameter/petstore/dbpassword
      Cpu: "1024"
      ExecutionRoleArn:
        Fn::GetAtt:
          - petclinicfgserviceTaskDefExecutionRoleEC9E10CC
          - Arn
      Family: petclinicstackpetclinicfgserviceTaskDefA3BECF54
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - petclinicfgserviceTaskDefTaskRole2840969B
          - Arn
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/TaskDef/Resource
  petclinicfgserviceTaskDefwebLogGroup111C118A:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/TaskDef/web/LogGroup/Resource
  petclinicfgserviceTaskDefExecutionRoleEC9E10CC:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/TaskDef/ExecutionRole/Resource
  petclinicfgserviceTaskDefExecutionRoleDefaultPolicyD61A0E55:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Ref: SsmParameterValuewarnerlooneyroadrunnerrepositoryarnC96584B6F00A464EAD1953AFF4B05118Parameter
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - petclinicfgserviceTaskDefwebLogGroup111C118A
                - Arn
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ssm:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :parameter/petstore/dbpassword
        Version: "2012-10-17"
      PolicyName: petclinicfgserviceTaskDefExecutionRoleDefaultPolicyD61A0E55
      Roles:
        - Ref: petclinicfgserviceTaskDefExecutionRoleEC9E10CC
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/TaskDef/ExecutionRole/DefaultPolicy/Resource
  petclinicfgserviceService2BAFA208:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: petclinicclusterD641C8DB
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 8080
          TargetGroupArn:
            Ref: petclinicfgserviceLBPublicListenerECSGroup0C5050A7
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - petclinicfgserviceServiceSecurityGroupFF49FEC5
                - GroupId
          Subnets:
            - Ref: petclinicvpcPrivateSubnet1Subnet9223FED1
            - Ref: petclinicvpcPrivateSubnet2Subnet63FF8DCC
      TaskDefinition:
        Ref: petclinicfgserviceTaskDef164D6564
    DependsOn:
      - petclinicfgserviceLBPublicListenerECSGroup0C5050A7
      - petclinicfgserviceLBPublicListener9DB7592F
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/Service/Service
  petclinicfgserviceServiceSecurityGroupFF49FEC5:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: petclinic-stack/petclinic-fg-service/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: petclinicvpc2170CC9D
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/Service/SecurityGroup/Resource
  petclinicfgserviceServiceSecurityGroupfrompetclinicstackpetclinicfgserviceLBSecurityGroup58E2261880803568AC8E:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 8080
      GroupId:
        Fn::GetAtt:
          - petclinicfgserviceServiceSecurityGroupFF49FEC5
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - petclinicfgserviceLBSecurityGroup156E34A6
          - GroupId
      ToPort: 8080
    Metadata:
      aws:cdk:path: petclinic-stack/petclinic-fg-service/Service/SecurityGroup/from petclinicstackpetclinicfgserviceLBSecurityGroup58E22618:8080
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAAE31T207DMAz9Ft6zTEM8wBu7MU2aoOoQ717qFbMuqRJnaKr67yS9bOUinnJ8cmwfO+1EPtzJyc0jfLqRyg7jShmLstoyqINI0RlvFYr5Xidg4YiMNgYvnkvPYm60Y+sVR24oDhcZMRldi1i4QnUrq7dSxbu3ZC4SvytIbf1OY5N7RanxjK+wK/DKX7mpc0YRxMoXcQTLdRKPZ+AVMH7CWSSWTgFeC6918B5wL2iddNGUw7zvR9Qstqi8JT6vrPFl4+FfYplbdO4XvdYNXwtUTlbzwrtucz18AptDnModFrgnTf1MPxmjGUijHXBd7hbtidp9d7AWNovt9noxaye/mF7Mus7RkpUplsYRG3uegcPoclQCxw05OS3L8DjNkjcGshkUoBVmP7piAY5JFUGxaxSk81N45b+zm9m/xUMdBWO60/R4cP8aOg9GGYS1IDjKKjXt59KciQ [...]
    Metadata:
      aws:cdk:path: petclinic-stack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValuewarnerlooneyroadrunnerrepositoryarnC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /warner/looney/roadrunner/repository_arn
  SsmParameterValuewarnerlooneyroadrunnerrepositorynameC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /warner/looney/roadrunner/repository_name
Outputs:
  petclinicfgserviceLoadBalancerDNSF80554F8:
    Value:
      Fn::GetAtt:
        - petclinicfgserviceLBF460FBEE
        - DNSName
  petclinicfgserviceServiceURLE345232C:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - petclinicfgserviceLBF460FBEE
              - DNSName
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
